Update Gender Label

--- a/oc-edit-contact-person.html
+++ b/oc-edit-contact-person.html
@@ -30,7 +30,7 @@
                 <paper-input label="Cell Number" value="{{_profile.cellphoneNumber}}"></paper-input>
             </div>
             <div class="row">
-                <paper-input label="Gender" value="{{_profile.sex}}"></paper-input>
+                <paper-input label="Gender (M/F)" value="{{_profile.sex}}"></paper-input>
             </div>
             <div slot="button">
                 <paper-button on-tap="_updateContactPerson">Save</paper-button>
